# bil-gene-search

./: README.md  app_demo.py  create_data_artefacts.ipynb  pyproject.toml
data/: cell_by_gene_files.tsv  datasets.pkl  gene_datasets - Gene × Dataset Matrix.csv  genes_resolved.pkl  presence_by_entrez.pkl
docs/: architecture_notes.md
sandbox/: resolve_gene_ids.ipynb  understand_dataset.ipynb
