[project]
name = "bil-gene-search"
version = "0.1.0"
description = "A prototype of BIL search of spatial transcriptomics datasets by gene."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brainimagelibrary>=0.0.23",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mygene>=3.2.2",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "streamlit-searchbox>=0.1.24",
]
